--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
 }
-.row {
-  margin: 0 25%
+.container {
+  text-align: center;
+}
+.button {
+  padding-top: 20%
 }
