--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -17,3 +17,7 @@ body {
 .text-align-center {
   text-align: center;
 }
+
+.card {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
