--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -1,9 +1,11 @@
-
 body {
-  margin: 0;
-  padding: 0;
   font-family: 'Roboto', sans-serif;
 }
+
+* {
+  border: 1px solid red;
+}
+
 .navbar-light .navbar-brand {
   font-size: 35px;
   font-weight: bold;
@@ -17,9 +19,9 @@ body {
   text-align: left;
   padding-top: 50px;
   color: white;
-  height: 100vh;
   width: 100%;
 }
+
 #background-photo {
 height: 100%;
 back-ground position: center;
@@ -39,4 +41,5 @@ back-ground position: center;
 
 .card {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  color: #484848;
 }
