--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -2,8 +2,6 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-
-
 .navbar-light .navbar-brand {
   font-size: 35px;
   font-weight: bold;
@@ -40,4 +38,5 @@ back-ground position: center;
 .card {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   color: #484848;
+  padding: 1.25em;
 }
