fixed nav and hover

--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -59,7 +59,9 @@ back-ground position: center;
   text-align: center;
   margin-top: 0.5em;
 }
-
+.nav-item1:hover {
+  background-color: inherit;
+}
 .loginBtn {
   box-sizing: border-box;
   position: relative;
