--- a/client/src/navbarFinal/navbarFinal.css
+++ b/client/src/navbarFinal/navbarFinal.css
@@ -19,7 +19,7 @@ body {
 	padding: 0;
 }
 
-ul {
+.ul {
 	list-style-type: none;
 	position: fixed;
 	margin-top: 0;
@@ -30,7 +30,7 @@ ul {
 	box-shadow: 0px -15px 20px 10px rgba(0,0,0,0.3);
 }
 
-li {
+.li {
 	float:right;
 	padding: 3px;
 	padding-bottom: 4px;
@@ -39,7 +39,7 @@ li {
 
 /* -----------1.0 Navbar Formatting---------- */
 
-li a {
+.li .a {
 	display: block;
 	color: #2677BE;
 	text-decoration: none;
@@ -50,7 +50,7 @@ li a {
 	font-size: 12pt;
 }
 
-li a:hover {
+.li .a:hover {
 color: #00477B;
 transition: all .2s ease-out;
 }
@@ -169,10 +169,3 @@ form > .button {
 form > .button:hover {
   background-color: #287AC1;
 }
-
-
-
-
-
-
-
