--- a/client/src/notesPage/notesPage.css
+++ b/client/src/notesPage/notesPage.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 
 @media (min-width: 420px) {
 	#menu-items {
@@ -12,11 +11,15 @@ html {
 }
 
 body {
-	font-family: Roboto;
+	font-family: Helvetica;
 	font-weight: normal;
 	width: 100%;
 	margin: 0;
 	padding: 0;
+}
+
+.col-md-4 {
+	
 }
 
 .col-md-5 {
@@ -25,10 +28,32 @@ body {
 	padding: 5px;
 	margin: 20px;
 	box-shadow: 0px 2px 12px -3px rgba(0,0,0,0.2);
+	transition: all .6s;
 }
 
+.offset-md-2 {
+	transition: all .6s;
+}
 
+.lecture {
+	font-size: 18pt;
+}
 
+p { 
+	padding: 4px 4px 0px 4px;
+}
 
+.row {
+	height: 40px;
+}
 
+.col-md-6 {
+	padding:0px;
+	margin:0px;
+}
+
+.no {
+	padding: 0px;
+	margin: 0px;
+}
 
